// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render the HeaderContainer 1`] = `
<div>
  <div
    class="header-container"
  >
    <div
      class="header-container__top"
    >
      <h1 />
      <div
        class="header-profile"
      >
        <img
          alt="user avatar"
          class="header-profile__image"
        />
        <div
          class="header-profile__text"
        >
          <h2
            class="header-profile__name"
          />
          <p
            class="header-profile__role"
          />
        </div>
        <button
          class="header-profile__arrow"
        >
          <img
            alt="toggle"
            src="upside-down-arrow-grey.svg"
          />
        </button>
      </div>
    </div>
    <h1 />
  </div>
</div>
`;

exports[`it should render the HeaderContainer with props 1`] = `
<div>
  <div
    class="header-container"
  >
    <div
      class="header-container__top"
    >
      <h1
        class="page-title page-title--small"
      >
        Pathways
      </h1>
      <div
        class="header-profile"
      >
        <img
          alt="user avatar"
          class="header-profile__image"
          src="man"
        />
        <div
          class="header-profile__text"
        >
          <h2
            class="header-profile__name"
          >
            John Doe
          </h2>
          <p
            class="header-profile__role"
          >
            Dev
          </p>
        </div>
        <button
          class="header-profile__arrow"
        >
          <img
            alt="toggle"
            src="upside-down-arrow-grey.svg"
          />
        </button>
      </div>
    </div>
    <h1
      class="page-title page-title--large"
    >
      Financial Forest
    </h1>
  </div>
</div>
`;
